feat : FGLM first implementation